2015-06-29  Oliver Kiddle  <opk@zsh.org>

	* 35627: Src/Zle/compcore.c, Src/Zle/compctl.c, Src/Zle/complete.c,
	Src/Zle/complist.c, Src/Zle/compresult.c, Src/Zle/zle_tricky.c:
	make reverse-menu-complete start with last match in menu selection

	* 35623: Src/Zle/complist.c: fix menu-selection where initial
	selection would not be displayed without scrolling

2015-06-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35643: Src/parse.c: redirections after typeset assignments
	were broken.

2015-06-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 35642: Src/context.c: signal queueing in zcontext_save_partial()

	* 35634: Src/exec.c: handle failure of gettempname() in namedpipe()

2015-06-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35635: Src/builtin.c: a bit more consistency about
	making elements of things local.

	* users/20281: Completion/Base/Core/_main_complete:
	don't require MULTIFUNCDEF as _main_complete is parsed
	before we can ensure it's set.

	* 35623: Src/builtin.c, Src/zsh.h, Test/B02typeset.ztst: 35610
	was incomplete: all is_array asignments should be treated as
	having a value.

2015-06-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 35626: Doc/Zsh/options.yo: update POSIX_CD to note that it is on
	in ksh and sh emulations

2015-06-26  Peter Stephenson  <p.stephenson@samsung.com>

	* 35615: Src/lex.c, Src/Zle/zle_tricky.c:
	fix completion after typeset.

	* 35613: Src/builtin.c, Test/B02typeset: handle
	array slices in typeset.

2015-06-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 35610: Src/builtin.c: typeset is silent if
	arguments is x=() even if array x already exists.

	* 35604: Src/exec.c, Test/B02typeset: create
	empty arrays in typeset with array=().

2015-06-24  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35550: Src/Zle/complist.c: fix backspace in interactive
	mode of menu-select

2015-06-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 35514: Han Pingtian: Src/pattern.c: [[:foo:]]